--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ copy.src.on.open=false
 copy.src.target=
 index.file=index.php
 run.as=LOCAL
-url=http://localhost/sgim.tabakalimoveis.com.br
+url=http://localhost/sgim
